--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -35,18 +35,18 @@
           }
       </div>
 
-      <a mat-icon-button
+      <!-- <a mat-icon-button
       *ngIf="isDarkTheme" 
     href="https://github.com/magnet107/Exam_Management_System" target="_blank"
     class="example-icon" aria-label="Example icon-button with share icon">
      <mat-icon ><img src="../../../assets/github-mark-white.png" id="github-icon"></mat-icon> 
-    </a>
-    <a mat-icon-button
+    </a> -->
+    <!-- <a mat-icon-button
     *ngIf="!isDarkTheme" 
   href="https://github.com/magnet107/Exam_Management_System" target="_blank"
   class="example-icon" aria-label="Example icon-button with share icon">
    <mat-icon ><img src="../../../assets/github-mark.svg" id="github-icon"></mat-icon> 
-  </a>
+  </a> -->
 
     <a mat-icon-button
     (click)="logout()"
