--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -32,9 +32,9 @@
   color: #333  !important;
 }
 
-.light .example-icon #github-icon {
-  --github-icon-path: url(../../Frontend/src/assets/github-mark.svg);
-}
+/* .light .example-icon #github-icon {
+  --github-icon-path: url(Frontend/src/assets/github-mark.svg);
+} */
 
 .dark .mat-card{
   border: 1px solid rgba(0, 0, 0, 0.4) !important;
